--- a/BackEnd/bookmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/bookmicroservices/src/main/resources/application.yaml
@@ -1,17 +1,17 @@
 spring:
   datasource:
-    url: jdbc:h2:file:~/SEP_book_db;AUTO_SERVER=TRUE
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  h2:
-    console:
-      path: /h2-console
-      enabled: true
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://database-1.cvf1hibyktqg.ap-southeast-2.rds.amazonaws.com:3306/development_database
+    username: admin
+    password: nagArijS6HtusuJ
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL55Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL55Dialect
   data:
     rest:
       base-path: api/
