--- a/BackEnd/loginmicroservices/src/main/resources/application.yaml
+++ b/BackEnd/loginmicroservices/src/main/resources/application.yaml
@@ -1,32 +1,18 @@
 spring:
   datasource:
-    url: jdbc:h2:file:~/SEP_login_db;AUTO_SERVER=TRUE
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  h2:
-    console:
-      path: /h2-console
-      enabled: true
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://database-1.cvf1hibyktqg.ap-southeast-2.rds.amazonaws.com:3306/development_database
+    username: admin
+    password: nagArijS6HtusuJ
   jpa:
-#    defer-datasource-initialization: true
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
-    database-platform: org.hibernate.dialect.H2Dialect
-#  sql:
-#    init:
-#      mode: always
-  devtools:
-    livereload:
-      port: 35730
-
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL55Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL55Dialect
 server:
-#  error:
-#    include-stacktrace: always
-  port: 8080
   error:
-    include-message: always
-    include-binding-errors: always
-#    set this to never in production
     include-stacktrace: always
+  port: 8080
